# edoras_app

./: CMakeLists.txt  README.md
fsw/edoras_conversion/: CMakeLists.txt  debug_utils_c_version.c  debug_utils_c_version.h  types.h
fsw/mission_inc/: edoras_app_perfids.h  gateway_app_perfids.h
fsw/platform_inc/: edoras_app_msgids.h  edoras_app_table.h  gateway_app_msgids.h  gateway_app_table.h
fsw/src/: debug_utils_c_version.h  edoras_app.c  edoras_app.h  edoras_app_events.h  edoras_app_msg.h  edoras_app_version.h  gateway_app.c  gateway_app.h  gateway_app_events.h  gateway_app_msg.h  gateway_app_version.h  robot_comm_udp_gateway_big_arm.c  robot_comm_udp_gateway_big_arm.h  robot_comm_udp_rover.c  robot_comm_udp_rover.h  robot_comm_udp_test.c  robot_comm_udp_test.h  test_conversion.c
fsw/tables/: edoras_app_tbl.c  gateway_app_tbl.c
